[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafana-cdktf-helpers"
version = "0.3.0"
description = "Shared CDKTF helper classes for Grafana alert rules, dashboards, and monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    {name = "Jason Antman"},
]
dependencies = [
    "cdktf==0.21.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["grafana_cdktf_helpers*"]

[tool.setuptools.package-data]
grafana_cdktf_helpers = ["dashboards/*.json"]
